# rmp

./: .gitignore  CMakeLists.txt
include/rmp/comm/: context.h  deserializer.h  publisher.h  serializer.h  subscriber.h
include/rmp/planner/: planner.h
include/rmp/renderer/: gl_base.h  renderer.h  renderer_ostream.h  renderer_window.h
include/rmp/renderer/camera/: camera.h
include/rmp/renderer/light/: light.h
include/rmp/renderer/material/: material.h
include/rmp/renderer/mesh/: mesh.h  mesh_loader.h
include/rmp/renderer/request/: request.h  request_clear.h  request_frame.h  request_frame_attach.h  request_light.h  request_mesh.h  requests.h
include/rmp/renderer/resource/: resource_mesh.h  resource_texture.h
include/rmp/renderer/shader/: light_shader.h  shader.h
include/rmp/renderer/texture/: texture.h  texture_loader.h
include/rmp/utils/: timer.h
shader/: .gitignore  color.vert  light.frag  light.vert
src/comm/: test_pub.cpp  test_sub.cpp
src/renderer/: renderer_main.cpp  renderer_window.cpp  test_renderer.cpp
src/renderer/camera/: camera.cpp
src/renderer/mesh/: mesh_loader.cpp
src/renderer/resource/: resource_mesh.cpp  resource_texture.cpp
src/renderer/shader/: light_shader.cpp  shader.cpp
src/renderer/texture/: texture_loader.cpp
